--- a/frontend/src/components/PostSaveAISuggestions.module.scss
+++ b/frontend/src/components/PostSaveAISuggestions.module.scss
@@ -176,7 +176,8 @@
 
 // Footer
 .footer {
-  @include flex-end;
+  display: flex;
+  justify-content: flex-end;
   gap: $spacing-3;
   margin-top: $spacing-6;
 }
